--- a/html/京东.html
+++ b/html/京东.html
@@ -319,7 +319,7 @@
 </script>
 </head>
 <body>
-	<div id="hello"><img class="aha" src="../image/ahaa.png"><input type="a" name="a"><img class="fangdajing" src="../image/fangdajing.png"></div>
+	<div id="hello"><img class="aha" src="../image/ahaa.png"><input type="a" name="a" value="电脑" style="color:#CCC" size="15" class="t_input_1" type="text" onfocus="if(this.value=='您的账户名和登录名'){this.value='';this.style.color='#000';this.className='t_input';}" onblur="if(this.value==''){this.value='您的账户名和登录名';this.style.color='#CCC';this.className='t_input_1'}"><img class="fangdajing" src="../image/fangdajing.png"></div>
 	<div id="xiangpin">
 		<ul>
 			<li><a href="#pinzhi">享品质</a></li>
@@ -406,7 +406,7 @@
 			</div>
 			<div class="wapper">
 				<div class="logo"><img src="../image/logo2.png"></div>
-				<div class="b1"><input type="a" name="a"><img class="fang" src="../image/fangdajing.png"><img class="che3" src="../image/che3.png"></div>
+				<div class="b1"><input type="a" name="a" value="电脑" style="color:#CCC" size="15" class="t_input_1" type="text" onfocus="if(this.value=='您的账户名和登录名'){this.value='';this.style.color='#000';this.className='t_input';}" onblur="if(this.value==''){this.value='您的账户名和登录名';this.style.color='#CCC';this.className='t_input_1'}"><img class="fang" src="../image/fangdajing.png"><img class="che3" src="../image/che3.png"></div>
 				<div class="b2"><a href="#"><span>千元好礼</span></a><a href="#">领免息劵</a> <a href="#">200减100</a> <a href="#">领百元劵</a> <a href="#">低至五折</a> <a href="#">微波炉</a> <a href="#">女靴</a> <a href="#">车厘子</a> <a href="#">洗头膏</a></div>
 				<div class="b3">
 					<ul class="b3_1">
@@ -712,21 +712,22 @@
 																					</li>
 
 																				</ul></li>
-																				<li id="chumo1"><img src="../image/www4.png"><p>游戏</p>
+																				<li id="chumo1" class="xiadong"><img src="../image/www4.png"><p>游戏</p>
 																					<ul id="diyige_1">
 																						<li class="diyige_1_4">游戏
 																							<img src="../image/www23.png">
 																						</li>
 
-																					</ul></li>
+																					</ul>
+																				</li>
 																					<li><img src="../image/www5.png"><p>企业购</p></li>
-																					<li><img src="../image/www6.png"><p>加油卡</p></li>
+																					<li class="xiadong"><img src="../image/www6.png"><p>加油卡</p></li>
 																					<li><img src="../image/www8.png"><p>酒店</p></li>
 																					<li><img src="../image/www7.png"><p>火车票</p></li>
 																					<li><img src="../image/www9.png"><p>众筹</p></li>
 																					<li><img src="../image/www10.png"><p>理财</p></li>
-																					<li><img src="../image/www11.png"><p>礼品卡</p></li>
-																					<li><img src="../image/www12.png"><p>白条</p></li>
+																					<li class="xiadong"><img src="../image/www11.png"><p>礼品卡</p></li>
+																					<li class="xiadong"><img src="../image/www12.png"><p>白条</p></li>
 																				</ul>
 																			</div>
 																			<div id="xiayi1"><img src="../image/wuxian.png"><img class="nnn" src="../image/nnn.png">
@@ -1497,7 +1498,7 @@
 																				</ul>
 																			</div>
 																			<div class="zuihoude">
-																				<img src="../image/shangbiao.png">
+																				<img src="../image/shangbiao2.png">
 																			</div>
 
 																		</body>
