--- a/html/京东注册.html
+++ b/html/京东注册.html
@@ -17,7 +17,7 @@
 		margin-bottom:30px;
 	}
 	.zhuce1 ul li input{
-		width: 350px;
+		width: 300px;
 		height: 56px;
 		border:1px solid #999;
 		border-left:0px;
@@ -44,8 +44,10 @@
 			<li><div>设置密码</div><input type="a" name="a" value="建议至少使用两种字符组成" style="color:#CCC" size="15" class="t_input_1" type="text" onfocus="if(this.value=='建议至少使用两种字符组成'){this.value='';this.style.color='#000';this.className='t_input';}" onblur="if(this.value==''){this.value='建议至少使用两种字符组成';this.style.color='#CCC';this.className='t_input_1'}"></li>
 			<li><div>确认密码</div><input type="a" name="a" value="再次输入密码" style="color:#CCC" size="15" class="t_input_1" type="text" onfocus="if(this.value=='再次输入密码'){this.value='';this.style.color='#000';this.className='t_input';}" onblur="if(this.value==''){this.value='再次输入密码';this.style.color='#CCC';this.className='t_input_1'}"></li>
 			<li><div>中国 0086</div><input type="a" name="a" value="建议使用常用手机" style="color:#CCC" size="15" class="t_input_1" type="text" onfocus="if(this.value=='建议使用常用手机'){this.value='';this.style.color='#000';this.className='t_input';}" onblur="if(this.value==''){this.value='建议使用常用手机';this.style.color='#CCC';this.className='t_input_1'}"></li>
-			<li><div>验 证 码</div><input type="a" name="a" value="请输入验证码" style="color:#CCC" size="15" class="t_input_1" type="text" onfocus="if(this.value=='请输入验证码'){this.value='';this.style.color='#000';this.className='t_input';}" onblur="if(this.value==''){this.value='请输入验证码';this.style.color='#CCC';this.className='t_input_1'}"></li>
-			<li><div>手机验证码</div><input type="a" name="a" value="请输入手机验证码" style="color:#CCC" size="15" class="t_input_1" type="text" onfocus="if(this.value=='请输入手机验证码'){this.value='';this.style.color='#000';this.className='t_input';}" onblur="if(this.value==''){this.value='请输入手机验证码';this.style.color='#CCC';this.className='t_input_1'}"></li>
+			<li><div>验 证 码</div><input type="a" name="a" value="请输入验证码" style="color:#CCC" size="15" class="t_input_1" type="text" onfocus="if(this.value=='请输入验证码'){this.value='';this.style.color='#000';this.className='t_input';}" onblur="if(this.value==''){this.value='请输入验证码';this.style.color='#CCC';this.className='t_input_1'}"><a href="#"><img src="../image/yanzheng1.png" style="position: absolute;left:370px;top:500px;"></a></li>
+			<li><div>手机验证码</div><input type="a" name="a" value="请输入手机验证码" style="color:#CCC" size="15" class="t_input_1" type="text" onfocus="if(this.value=='请输入手机验证码'){this.value='';this.style.color='#000';this.className='t_input';}" onblur="if(this.value==''){this.value='请输入手机验证码';this.style.color='#CCC';this.className='t_input_1'}"><a href="#"><img src="../image/yanzheng2.png" style="position: absolute;left:338px;top:590px;"></a></li>
+			<li><img src="../image/mmm3.png"> 我已阅读并同意《京东用户注册协议》</li>
+			<li><a href="#"><img src="../image/mmm2.png"></a></li>
 		</ul>
 		<img src="../image/zhuce2.png" style="float: right;position:absolute;top:109px;right: 0px;">
 		<img src="../image/zhuce3.png" style="position: absolute;top: 830px;left: 130px;">
