--- a/html/火影2.html
+++ b/html/火影2.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title></title>
+	<meta charset="utf-8">
 	<style type="text/css">
 	body{
 		background-color:white;
@@ -10,10 +11,19 @@
 		height: 200px;
 		margin-left:200px;
 	}
+	a{
+		position: absolute;
+		right: 400px;
+		text-decoration:none;
+		color:black;
+		padding: 5px 10px;
+		background-color: gray;
+	}
 	</style>
 </head>
 <body>
 	<img src="../image/huoying/zzz.png" style="position: absolute;top: -20px;left: 780px;">
+	<a href="京东.html">返回首页</a>
 	<img src="../image/huoying/zuozhu2.png">
 	<embed src="../1.mp4" width="650px" height="400px" style="position: relative;left: 30px;"></embed>
 	<img src="../image/huoying/mingren2.png" style="float: right;">
