--- a/html/京东登录.html
+++ b/html/京东登录.html
@@ -346,7 +346,7 @@
 </script>
 </head>
 <body>
-	<div id="hello"><img class="aha" src="../image/ahaa.png"><input type="a" name="a"><img class="fangdajing" src="../image/fangdajing.png"></div>
+	<div id="hello"><img class="aha" src="../image/ahaa.png"><input type="a" name="a" value="电脑" style="color:#CCC" size="15" class="t_input_1" type="text" onfocus="if(this.value=='您的账户名和登录名'){this.value='';this.style.color='#000';this.className='t_input';}" onblur="if(this.value==''){this.value='您的账户名和登录名';this.style.color='#CCC';this.className='t_input_1'}"><img class="fangdajing" src="../image/fangdajing.png"></div>
 	<div id="xiangpin">
 		<ul>
 			<li><a href="#pinzhi">享品质</a></li>
@@ -357,14 +357,14 @@
 			<li><a href="#aichi">爱吃</a></li>
 			<li><a href="#muyin">母婴家居</a></li>
 			<li><a href="#tushu">图书汽车</a></li>
-			<li><a href="#xuni">虚拟</a></li>
+			<li><a href="#xuni">虚拟</a></li>	
 			<li><a href="#haimei">还没逛够</a></li>
 			<li><a href="#dingbu">顶部</a></li>
 		</ul>
 	</div>
 	<div id="denglu">
 			<div class="xiamu">
-		<img src="../image/denglu2.png"><br>
+		<img src="../image/denglu2.png"><a href="京东.html"><img src="../image/mmm4.png" style="position: absolute;left:0px;left: 380px;"></a><br>
 		<img src="../image/denglu3.png"><input class="zxc" type="a" name="a"><br>
 		<img src="../image/denglu4.png"><input class="zxc" type="a" name="a">
 		<img src="../image/denglu5.png">
@@ -443,7 +443,7 @@
 			</div>
 			<div class="wapper">
 				<div class="logo"><img src="../image/logo2.png"></div>
-				<div class="b1"><input type="a" name="a"><img class="fang" src="../image/fangdajing.png"><img class="che3" src="../image/che3.png"></div>
+				<div class="b1"><input type="a" name="a" value="电脑" style="color:#CCC" size="15" class="t_input_1" type="text" onfocus="if(this.value=='您的账户名和登录名'){this.value='';this.style.color='#000';this.className='t_input';}" onblur="if(this.value==''){this.value='您的账户名和登录名';this.style.color='#CCC';this.className='t_input_1'}"><img class="fang" src="../image/fangdajing.png"><img class="che3" src="../image/che3.png"></div>
 				<div class="b2"><a href="#"><span>千元好礼</span></a><a href="#">领免息劵</a> <a href="#">200减100</a> <a href="#">领百元劵</a> <a href="#">低至五折</a> <a href="#">微波炉</a> <a href="#">女靴</a> <a href="#">车厘子</a> <a href="#">洗头膏</a></div>
 				<div class="b3">
 					<ul class="b3_1">
@@ -1534,7 +1534,7 @@
 																				</ul>
 																			</div>
 																			<div class="zuihoude">
-																				<img src="../image/shangbiao.png">
+																				<img src="../image/shangbiao2.png">
 																			</div>
 																			
 																		</body>
